Fixed alignment of extension description for lists

--- a/sweettooth/static/css/sweettooth.css
+++ b/sweettooth/static/css/sweettooth.css
@@ -394,7 +394,7 @@ li.extension:last-child, #local_extensions div.extension:last-child {
 }
 
 .extension .description {
-    margin: 0.5em 32px 0.5em 0;
+    margin: 0.5em 32px 0.5em 8px;
     font-size: 1.2em;
     overflow: auto;
     white-space: pre-line;
